<resources>
    <string name="app_name">Vuzix Speech Sample</string>
    <string name="main_activity_name">Speech Sample</string>
    <string name="overview">Say \"Hello Vuzix\" or click \"Listen\" then read any button</string>
    <string name="btn_text_pop_up">Display Message</string>
    <string name="btn_text_clear">Clear Message</string>
    <string name="btn_text_restore">Restore Default Text</string>
    <string name="btn_text_listen">Listen</string>
    <string name="btn_text_stop">Stop Listening</string>
    <string name="default_text">Sample Text</string>
    <string name="entry_hint">Enter your text here</string>
    <string name="only_on_vuzix">Voice SDK only runs on Vuzix Smart Glasses w. Vuzix Speech SDK support</string>
    <string name="upgrade_vuzix">Please upgrade your Vuzix Smart Glasses to get all features</string>
</resources>
